plugins {
    id 'java-library'
    id 'com.github.johnrengelman.shadow' version '7.0.0'
}

group = 'it.ohalee.minecraftgpt'
version = '1.2.6'

sourceCompatibility = 1.8
targetCompatibility = 1.8

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

project.ext.fullVersion = version

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        url "https://hub.spigotmc.org/nexus/content/repositories/snapshots"
    }
}

dependencies {

    compileOnly "org.spigotmc:spigot-api:1.12.2-R0.1-SNAPSHOT", {
        ext { fatJarExclude = true }
    }

    implementation 'com.theokanning.openai-gpt3-java:service:0.12.0'

    compileOnly 'org.checkerframework:checker-qual:3.21.2'
    compileOnly 'org.jetbrains:annotations:23.0.0'

    compileOnly 'org.projectlombok:lombok:1.18.24'
    annotationProcessor 'org.projectlombok:lombok:1.18.24'

    testCompileOnly 'org.projectlombok:lombok:1.18.24'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
}

shadowJar {
    archiveFileName = "MinecraftGPT-${project.ext.fullVersion}.jar"
}

artifacts {
    archives shadowJar
}